# brewtroller

Arduino_FatFS/: ff.h  ffconf.h
Arduino_FatFS/trunk/: arduino_fatfs.cpp  arduino_fatfs.h  diskio.h  ff.c  ff.h  integer.h  mmc.c
BTDisplay/trunk/: BTDisplay.pde  BTDisplay_0_1.pde  LCD_4bit.pde  LCD_BigFont.pde  LCD_Font_2x2.pde  LCD_Font_3x4.pde  Log.pde
BTcgi/: configure
BTcgi/Debug/: libtool
BTcgi/autom4te.cache/: output.0  requests  traces.0
BTcgi/src/: Makefile.am  Makefile.in  main.c
BTnic/: Makefile.am  Makefile.in  cfg.c  configure  conn.c  conn.h  globals.h  main.c  sig.c  tty.c
BTnic-Web-Framework/: BT.js
BTnic/Debug/: Makefile  config.status  libtool
BTnic/Debug/po/: Makefile
BTnic/Debug/src/: Makefile
BTnic/Debug/src/.deps/: conn.Po  log.Po  queue.Po
BTnic/autom4te.cache/: output.1  requests  traces.1
BTnic/src/: Makefile.am  cfg.c  cfg.h  conn.h  crc16.h  globals.h  log.c  main.c  queue.c  sock.h  state.c  tty.h
BTnic/trunk/: BrewLogger.pde  Util.pde
BTnicEmb/: BTnicEmb.cof  BTnicEmb.hex  BTnicEmb.map  BTnicEmb.mcp  BTnicEmb.mcs  BTnicEmb.mcw  BTnic_Comm.c  BTnic_Comm.h  CustomHTTPApp.c  HTTPPrint.h  HTTPPrint.idx  HardwareProfile.h  MPFSImg2.c  Main.c  Main.h  TCPIPConfig.h  TCPIPConfig.h.bak  dataflash.c  eeprom.c  eeprom.h
BTnicEmb/TCPIP Stack/: MPFS2.c  SPIFlash.h
BTnicEmb/Web_Content/: data.cgi  index.html
BrewLogger/trunk/: Log.pde
BrewTroller/: AnalogIn.pde  BrewCore.pde  BrewTroller.pde  Com.pde  Global.h  OT_Inputs.h  OT_Outputs.cpp  OT_UI.cpp  OT_UI.h  Outputs.pde  Temp.pde  UI.pde  UI_LCD.h
FermTroller/: Com.pde  Com_S0ASC.pde  Config.h  EEPROM.pde  Enum.h  FermCore.pde  FermTroller.pde  HWProfile.h  Outputs.pde  README.txt  UI.pde  Util.pde
FermTroller/trunk/: FermCore.pde  FermTroller.pde  FermTroller_0_1.pde
FlowTroller/: Alarm.pde  Config.h  EEPROM.pde  Events.pde  FlowCore.pde  FlowTroller.pde  Log.pde  Outputs.pde  StepLogic.pde  Temp.pde  Timer.pde  UI.pde  UI_LCD_4bit.pde  Util.pde
FlowTroller/trunk/: EEPROM.pde  FlowCore.pde  FlowTroller.pde  Outputs.pde  StepLogic.pde  Temp.pde  Timer.pde  UI.pde  Util.pde
I2CLCD/: I2CLCD.pde
I2CLCD/example/: I2CLCD_Test.pde
Libraries/Arduino_FatFS/: diskio.h
Libraries/Encoder/: encoder.cpp  encoder.h
Libraries/Menu/: menu.cpp
Libraries/ModbusMaster/: ModbusMaster.cpp
Libraries/OpenTroller/: CMakeLists.txt  Doxyfile.in  OT_Outputs.cpp
Libraries/OpenTroller/Archive/: GPOutput.h
Libraries/OpenTroller/docs/: README
Libraries/OpenTroller/libraries/ModbusMaster/: ModbusMaster.cpp
Libraries/OpenTroller/src/: CMakeLists.txt  OTAnalogInput.h  OTAnalogInputBank.cpp  OTDigitalIO.h  OTOutput.cpp  OTOutput.h  OTOutputAVRIO.cpp  OTOutputAVRIO.h  OTOutputBank.cpp  OTOutputBank.h  OTOutputBankAVRIO.h  OTOutputBankGPIO.cpp  OTOutputBankGPIO.h  OTOutputBankGroups.h  OTOutputBankModbus.cpp  OTOutputBankModbus.h  OTOutputBankMux.cpp  OTOutputBankMux.h  OTOutputGPIO.cpp  OTOutputGPIO.h  OTOutputGroup.cpp  OTOutputGroup.h  OTOutputModbus.cpp  OTOutputModbus.h  OTOutputMux.cpp  OTOutputMux.h  OTOutputs.cpp  OTOutputs.h  OT_1Wire.h  OT_1WireAVRIO.cpp  OT_1WireAVRIO.h  OT_1WireDS2482.cpp  OT_AVRIO.h  OT_Encoder.h  OT_HWProfile.h  OT_LCD.h  OT_LCD4Bit.cpp  OT_LCD4Bit.h  OT_LCDI2C.cpp  OT_LiquidCrystal.h  (+5 more)
Libraries/OpenTroller/src/LCD/: OT_LCD4Bit.cpp
Libraries/OpenTroller/src/outputs/: OTOutput.cpp  OTOutput.h  OTOutputBankGPIO.cpp  OTOutputBankGroups.cpp  OTOutputBankModbus.cpp  OTOutputBankModbus.h  OTOutputBankMux.h  OTOutputGPIO.cpp  OTOutputGPIO.h  OTOutputGroup.cpp  OTOutputModbus.cpp  OTOutputModbus.h  OTOutputMux.cpp  OTOutputMux.h  OTOutputs.h
Libraries/OpenTroller/test/console/: CMakeLists.txt  console.cpp  console.h
Libraries/modbus/: port.h
LiquidCrystalFP/: LiquidCrystalFP.h
MODBUS_RGBIO8/: svn-commit.tmp
MODBUS_RGBIO8/eagle/: RGBIO8.brd  RGBIO8.sch
MODBUS_RGBIO8/src/: Makefile  main.c  tlc5947.c  tlc5947.h  twi.c
MODBUS_Relay8/: MODBUS_Relay8.cpp.hex  MODBUS_Relay8.pde
MODBUS_Relay8/test_scripts/: Coil Set 1.cmd  Coils Poll.cmd  Holding Registers Poll.cmd  ID Mode Disabled.cmd  ID Mode Enabled.cmd  Slave Address Clear.cmd  Slave Address Set.cmd
Menu/: menu.cpp
OpenTrollerSDK/: OT_Inputs.h  OT_Outputs.cpp  OpenTrollerSDK.pde
SmokeTroller/: BTPD.pde  Config.h  EEPROM.pde  Enum.h  Log.pde  Log_ASCII.pde  Log_BTnic.pde  Outputs.pde  SmokeCore.pde  SmokeTroller.pde  StepLogic.pde  Timer.pde  UI.pde
TestTroller/: Config.h  Enum.h  Events.pde  HWProfile.h  LCD_4bit.pde  Outputs.pde  Temp.pde  Test.pde  TestTroller.pde  UI.pde  UI_LCD.h  UI_LCD_4bit.pde  UI_LCD_I2C.pde  Util.pde
Utilities/: BumpRevAndCommit.pl
WindowsProjects/: BrewTrollerProjects-VS2010.sln
branches/BrewTroller/cmake/: BrewTroller.pde  CMakeLists.txt  Config.h  Outputs.pde
branches/BrewTroller/cmake/libraries/: CMakeLists.txt
branches/BrewTroller/cmake/libraries/encoder/: encoder.cpp
branches/BrewTroller/cmake/libraries/menu/: menu.h
branches/BrewTroller/cmake/libraries/menu/examples/testMenu/: UI.pde  util.pde
branches/BrewTroller/cmake/libraries/pin/: pin.cpp
branches/BrewTroller/cmake/src/: BrewCore.c  BrewTroller.c  CMakeLists.txt  Com.c  Com_BTPD.c  Com_BTPD.h  Com_S0ASC.c  Config.h  EEPROM.c  Events.c  Outputs.c  StepLogic.c  StepLogic.h  Temp.c  Temp.h  Timer.c  UI.c  Util.c  Volume.c  Volume.h
encoder/: encoder.cpp
trunk/: AutoBrew.pde  AutoMash.pde  BrewTroller.pde  BrewTrollerRelayBoard.brd  BrewTrollerV1.0.brd  BrewTrollerWChipOnboard.brd  BrewTroller_1.0.pde  BrewTroller_v0_1.pde  CurrentPinAssignments.txt  EEPROM.pde  Enc_CUI.pde  Encoder.pde  Ferm.pde  LCD_4bit.pde  LCD_DebugSerial.pde.x  LCD_SparkFunSerial.pde  Menu.pde  Monitor.pde  PID.pde  P_Arduino.pde  P_Sanguino.pde  Setup.pde  Temp.pde  Util.pde  Volume.pde
trunk/Libraries/OpenTroller/test/: CMakeLists.txt
trunk/Libraries/OpenTroller/test/console/: CMakeLists.txt  console.cpp  console.h
wiki/: DevelopersGuide.wiki  PinAssignments.wiki  TestersGuide.wiki
(+566 files in other folders)
