#===================================================================================================
# Author: Timothy Reaves
# Date: 2011/12/21
#
# Description: OpenTroller test files
#
#===================================================================================================

# Console is an app that can be used to drive the OpenTroller framwork over a tty session.
add_subdirectory(console)
